<resources>
    <string name="app_name">Skadi</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="menu">Menu</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="title_activity_nav_menu">NavMenu</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_menu">Menu</string>

    <string-array
        name="planets_array">
        <item>Back</item>
        <item>Home</item>
        <item>Map</item>
        <item>Score</item>
    </string-array>
=======

    <string name="main_menu_drawer_back">Back</string>
    <string name="main_menu_drawer_home">Home</string>
    <string name="main_menu_drawer_map">Map</string>
    <string name="main_menu_drawer_score">Score</string>
    <string name="main_menu_drawer_preferences">Preferences</string>
    <string name="main_menu_drawer_settings">Settings</string>
>>>>>>> 79d3eb6096d991d3b597d4fbd477eb2451317fe9
</resources>
