<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_back" android:icon="@drawable/back_arrow"
            android:title="@string/main_menu_drawer_back" />
        <item android:id="@+id/nav_home" android:icon="@drawable/home_button"
            android:title="@string/main_menu_drawer_home" />
        <item android:id="@+id/nav_map" android:icon="@drawable/compass"
            android:title="@string/main_menu_drawer_map" />
        <item android:id="@+id/nav_score" android:icon="@drawable/trophy_button"
            android:title="@string/main_menu_drawer_score" />

    </group>

    <item android:title="@string/main_menu_drawer_preferences">
        <menu>
            <item android:id="@+id/nav_settings" android:icon="@drawable/settings_button"
                android:title="@string/main_menu_drawer_settings" />
        </menu>
    </item>

</menu>